<resources>
    <string name="China_Mobile">China Mobile</string>
    <string name="China_Mobile_HD">China Mobile (HD)</string>
    <string name="China_Telecom">China Telecom</string>
    <string name="China_Unicom">China Unicom</string>
    <string name="abbrev_wday_month_day_no_year">EEEEMMMMd</string>
    <string name="abbrev_wday_month_day_no_year_alarm">EEEMMMd</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="accessibility_accessibility_button">Accessibility</string>
    <string name="accessibility_action_divider_bottom_full">Bottom full screen</string>
    <string name="accessibility_action_divider_left_30">Left 30%</string>
    <string name="accessibility_action_divider_left_50">Left 50%</string>
    <string name="accessibility_action_divider_left_70">Left 70%</string>
    <string name="accessibility_action_divider_left_full">Left full screen</string>
    <string name="accessibility_action_divider_right_full">Right full screen</string>
    <string name="accessibility_action_divider_top_30">Top 30%</string>
    <string name="accessibility_action_divider_top_50">Top 50%</string>
    <string name="accessibility_action_divider_top_70">Top 70%</string>
    <string name="accessibility_action_divider_top_full">Top full screen</string>
    <string name="accessibility_airplane_mode">Airplane mode.</string>
    <string name="accessibility_ambient_display_charging">Charging</string>
    <string name="accessibility_aspect_button">Fullscreen mode</string>
    <string name="accessibility_assistant">Quick ball</string>
    <string name="accessibility_back">Back</string>
    <string name="accessibility_battery_details">Open battery details</string>
    <string name="accessibility_battery_full">Battery full.</string>
    <string name="accessibility_battery_level">Battery %d percent.</string>
    <string name="accessibility_battery_level_charging">Battery charging, %d percent.</string>
    <string name="accessibility_battery_one_bar">Battery one bar.</string>
    <string name="accessibility_battery_three_bars">Battery three bars.</string>
    <string name="accessibility_battery_two_bars">Battery two bars.</string>
    <string name="accessibility_bluetooth_connected">Bluetooth connected.</string>
    <string name="accessibility_bluetooth_disconnected">Bluetooth disconnected.</string>
    <string name="accessibility_bluetooth_name">Connected to %s.</string>
    <string name="accessibility_bluetooth_tether">Bluetooth tethering.</string>
    <string name="accessibility_brightness">Display brightness</string>
    <string name="accessibility_brightness_slider">Brightness slider</string>
    <string name="accessibility_camera_button">Camera</string>
    <string name="accessibility_carrier_network_change_mode">Carrier network changing.</string>
    <string name="accessibility_cast_name">Connected to %s.</string>
    <string name="accessibility_casting">@string/quick_settings_casting</string>
    <string name="accessibility_casting_turned_off">Screen casting stopped.</string>
    <string name="accessibility_cell_data">Mobile Data</string>
    <string name="accessibility_cell_data_off">Mobile Data Off</string>
    <string name="accessibility_cell_data_on">Mobile Data On</string>
    <string name="accessibility_clear_all">Clear all notifications.</string>
    <string name="accessibility_compatibility_zoom_button">Compatibility zoom button.</string>
    <string name="accessibility_compatibility_zoom_example">Zoom smaller to larger screen.</string>
    <string name="accessibility_data_connection_1x">1 X</string>
    <string name="accessibility_data_connection_3.5g">3.5G</string>
    <string name="accessibility_data_connection_3g">3G</string>
    <string name="accessibility_data_connection_4g">4G</string>
    <string name="accessibility_data_connection_4g_plus">4G+</string>
    <string name="accessibility_data_connection_cdma">CDMA</string>
    <string name="accessibility_data_connection_edge">Edge</string>
    <string name="accessibility_data_connection_gprs">GPRS</string>
    <string name="accessibility_data_connection_hspa">HSPA</string>
    <string name="accessibility_data_connection_lte">LTE</string>
    <string name="accessibility_data_connection_lte_plus">LTE+</string>
    <string name="accessibility_data_connection_roaming">Roaming</string>
    <string name="accessibility_data_connection_wifi">Wi-Fi</string>
    <string name="accessibility_data_one_bar">Data one bar.</string>
    <string name="accessibility_data_saver_off">Data saver is off</string>
    <string name="accessibility_data_saver_on">Data saver is on</string>
    <string name="accessibility_data_signal_full">Data signal full.</string>
    <string name="accessibility_data_three_bars">Data three bars.</string>
    <string name="accessibility_data_two_bars">Data two bars.</string>
    <string name="accessibility_desc_close">Close</string>
    <string name="accessibility_desc_connected">Connected.</string>
    <string name="accessibility_desc_connecting">Connecting.</string>
    <string name="accessibility_desc_lock_screen">Lock screen.</string>
    <string name="accessibility_desc_notification_icon">%1$s notification: %2$s</string>
    <string name="accessibility_desc_notification_shade">Notification shade.</string>
    <string name="accessibility_desc_off">Off.</string>
    <string name="accessibility_desc_on">On.</string>
    <string name="accessibility_desc_quick_settings">Quick settings.</string>
    <string name="accessibility_desc_quick_settings_edit">Quick settings editor.</string>
    <string name="accessibility_desc_recent_apps">Overview.</string>
    <string name="accessibility_desc_settings">Settings</string>
    <string name="accessibility_ime_switch_button">Switch input method button.</string>
    <string name="accessibility_menu">Menu</string>
    <string name="back">Back</string>
    <string name="delete">Delete</string>
    <string name="emergency_call_string">Emergency</string>
    <string name="face_data_introduction_msg">Face data can be used to unlock your device or verify your identity. Add Lock screen password before adding your face data.</string>
    <string name="face_data_introduction_next">Next</string>
    <string name="face_data_introduction_title">Face recognition</string>
    <string name="face_data_manage_delete_msg">Delete face data</string>
    <string name="face_data_manage_delete_title">Face data</string>
    <string name="face_data_manage_unlock_msg">Unlock device using your face data</string>
    <string name="face_data_manage_unlock_title">Unlock using face data</string>
    <string name="face_data_siggesstion_next">Next</string>
    <string name="face_data_suggesstion_first">Security issues: Face unlock is less secure than a PIN, password, or pattern. Your device might be unlocked with your photo, as well as by people or objects with similar appearance.</string>
    <string name="face_data_suggesstion_second">Make sure all parts of your face aren\'t covered by objects and are clearly visible. Your face should be well-lit as well.</string>
    <string name="face_unlock_by_notification_screen_on_msg">You can unlock the device using face data whenever the screen lights up for incoming notifications. This may drain the battery faster.</string>
    <string name="face_unlock_by_notification_screen_on_title">Allow Face unlock when screen lights up</string>
    <string name="face_unlock_success_stay_screen_msg">Stay on the Lock screen after your face is verified. Swipe up to open the Home screen.</string>
    <string name="face_unlock_success_stay_screen_title">Stay on Lock screen after unlocking</string>
    <string name="fs_gesture_back_ready_title">Go back</string>
    <string name="fs_gesture_final_over">I\'m done</string>
    <string name="fs_gesture_final_restart">One more time</string>
    <string name="fs_gesture_final_summary">You can switch back to using buttons in Settings &gt; Full screen display</string>
    <string name="fs_gesture_final_title">You\'re ready to rock!</string>
    <string name="fsg_demo_back">Back</string>
    <string name="fsg_demo_go_on">Learn</string>
    <string name="how_to_back_home">Go to Home screen</string>
    <string name="how_to_switch_recents">Open Recents</string>
    <string name="how_to_use_fsg">You can perform these actions using gestures:</string>
    <string name="lockscreen_shortcut_left">Left shortcut</string>
    <string name="lockscreen_shortcut_right">Right shortcut</string>
    <string name="lockscreen_unlock_left">Left shortcut also unlocks</string>
    <string name="lockscreen_unlock_right">Right shortcut also unlocks</string>
    <string name="other">Other</string>
    <string name="screen_pinning_description">This keeps it in view until you unpin. Press and hold Home and the Power button at the same time to unpin.</string>
    <string name="screen_pinning_negative">No thanks</string>
    <string name="screen_pinning_positive">Got it</string>
    <string name="screen_pinning_title">Screen is pinned</string>
    <string name="screenshot_delete">Delete</string>
    <string name="screenshot_edit">Edit</string>
    <string name="screenshot_feedback_txt">Feedback</string>
    <string name="screenshot_long_screenshot">Scroll</string>
    <string name="screenshot_send">Send</string>
</resources>