<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:paddingBottom="@dimen/fsg_demo_paddingbottom" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:textSize="@dimen/fsgesture_final_title_size" android:textStyle="bold" android:textColor="@color/fsgesture_final_title_font_color" android:gravity="center" android:id="@+id/fs_gesture_final_title" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fsgesture_final_title_margin_top" android:text="@string/fs_gesture_final_title"/>
    <TextView android:textSize="@dimen/fsgesture_final_summary_size" android:textColor="@color/fsgesture_final_summary_font_color" android:gravity="center" android:id="@+id/fs_gesture_final_summary" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/fsgesture_final_summary_margin_top" android:text="@string/fs_gesture_final_summary" android:layout_below="@+id/fs_gesture_final_title"/>
    <TextView android:textColor="@drawable/btn_text_color_normal" android:id="@+id/fs_gesture_final_restart" android:text="@string/fs_gesture_final_restart" android:layout_alignParentBottom="true" android:layout_marginStart="@dimen/fsg_demo_paddinglr" android:layout_alignParentStart="true" style="@style/FsgDemoStepTextStyle"/>
    <TextView android:textColor="@drawable/btn_text_color_next" android:id="@+id/fs_gesture_final_over" android:text="@string/fs_gesture_final_over" android:layout_alignParentBottom="true" android:layout_marginEnd="@dimen/fsg_demo_paddinglr" android:layout_alignParentEnd="true" style="@style/FsgDemoStepTextStyle"/>
</RelativeLayout>
