<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_vertical" android:id="@+id/screen_pinning_text_area" android:background="?android:attr/colorAccent" android:layout_width="wrap_content" android:layout_height="wrap_content">
    <TextView android:textSize="24sp" android:textColor="@color/screen_pinning_primary_text" android:id="@+id/screen_pinning_title" android:paddingTop="43dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/screen_pinning_title" android:paddingStart="48dp" android:paddingEnd="48dp"/>
    <TextView android:textSize="16sp" android:textColor="@color/screen_pinning_primary_text" android:id="@+id/screen_pinning_description" android:paddingTop="12.6dp" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/screen_pinning_description" android:layout_below="@+id/screen_pinning_title" android:paddingStart="48dp" android:paddingEnd="48dp"/>
    <Button android:textSize="14sp" android:textColor="@android:color/white" android:id="@+id/screen_pinning_ok_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="36dp" android:layout_marginTop="18dp" android:text="@string/screen_pinning_positive" android:layout_below="@+id/screen_pinning_description" android:paddingStart="8dp" android:paddingEnd="8dp" android:layout_marginEnd="40dp" android:layout_alignParentEnd="true" style="@style/Widget.Material.Button"/>
    <Button android:textSize="14sp" android:textColor="@android:color/white" android:id="@+id/screen_pinning_cancel_button" android:background="@null" android:layout_width="wrap_content" android:layout_height="36dp" android:text="@string/screen_pinning_negative" android:layout_alignTop="@+id/screen_pinning_ok_button" android:paddingStart="8dp" android:paddingEnd="8dp" android:layout_marginEnd="4dp" android:layout_toStartOf="@+id/screen_pinning_ok_button" style="@style/Widget.Material.Button"/>
</RelativeLayout>
