<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="@dimen/navigation_side_padding" android:layout_height="match_parent" android:layout_weight="0">
    <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/menu" android:visibility="invisible" android:layout_width="@dimen/navigation_extra_key_width" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@string/accessibility_menu" android:layout_marginEnd="2dp" app:keyCode="82" app:playSound="false"/>
    <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/ime_switcher" android:visibility="invisible" android:layout_width="@dimen/navigation_extra_key_width" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@string/accessibility_ime_switch_button" android:layout_marginEnd="2dp"/>
    <com.android.systemui.statusbar.policy.KeyButtonView android:id="@+id/accessibility_button" android:visibility="invisible" android:layout_width="@dimen/navigation_extra_key_width" android:layout_height="match_parent" android:scaleType="centerInside" android:contentDescription="@string/accessibility_accessibility_button" android:layout_marginEnd="2dp"/>
</FrameLayout>
