<?xml version="1.0" encoding="utf-8"?>
<com.android.keyguard.EmergencyCarrierArea xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/eca_overlap" android:layout_alignParentBottom="true">
    <com.android.keyguard.EmergencyButton android:ellipsize="end" android:id="@+id/emergency_call_button" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/emergency_call_string" android:singleLine="true" android:layout_weight="1" android:textAllCaps="@bool/kg_use_all_caps" style="@style/Keyguard.TextView.EmergencyButton"/>
    <Space android:id="@+id/empty_space" android:layout_width="0px" android:layout_height="match_parent" android:layout_weight="1"/>
    <TextView android:ellipsize="end" android:gravity="center" android:id="@+id/delete_button" android:visibility="gone" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/delete" android:singleLine="true" android:layout_weight="1" style="@style/Keyguard.TextView.BackButton"/>
    <com.android.keyguard.BackButton android:ellipsize="end" android:id="@+id/back_button" android:layout_width="0dp" android:layout_height="match_parent" android:text="@string/back" android:singleLine="true" android:layout_weight="1" android:textAllCaps="@bool/kg_use_all_caps" style="@style/Keyguard.TextView.BackButton"/>
</com.android.keyguard.EmergencyCarrierArea>
