<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <ListView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@android:id/list" android:visibility="gone" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="false" android:cacheColorHint="@android:color/transparent"/>
    <ImageView android:layout_gravity="center_horizontal" android:background="@drawable/miui_add_face_recoginition_img" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="145.7dp"/>
    <TextView android:textSize="18.6sp" android:textColor="@color/miui_face_data_regular_text_color" android:layout_gravity="center_horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="25dp" android:text="@string/face_data_introduction_title"/>
    <TextView android:textSize="14sp" android:textColor="@color/face_unlock_introduction_msg_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.7dp" android:text="@string/face_data_introduction_msg" android:lineSpacingExtra="1.3dp" android:layout_marginStart="40dp" android:layout_marginEnd="40dp"/>
    <LinearLayout android:gravity="bottom|center_vertical|center_horizontal|center" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="18.3dp" android:layout_weight="1" android:layout_marginStart="26.7dp" android:layout_marginEnd="26.7dp">
        <Button android:id="@+id/miui_face_recoginition_intorduction_next" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/face_data_introduction_next"/>
    </LinearLayout>
</LinearLayout>
