<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <ImageView android:id="@+id/background" android:layout_width="match_parent" android:layout_height="match_parent" android:src="?android:attr/windowBackground" android:scaleType="fitXY"/>
    <com.android.systemui.screenshot.ScreenshotScrollView android:id="@+id/global_screenshot" android:clickable="true" android:layout_width="match_parent" android:layout_height="0px" android:layout_above="@+id/button_container" android:layout_alignParentTop="true"/>
    <FrameLayout android:id="@+id/top_titleormsg_layout" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_alignParentTop="true">
        <RelativeLayout android:id="@+id/screenshot_actionbar_layout" android:background="@color/screenshot_ui_bg" android:visibility="invisible" android:layout_width="match_parent" android:layout_height="@dimen/screenshot_actionbar_back_height">
            <TextView android:textSize="15sp" android:textColor="@color/screenshot_lighttheme_text_color" android:id="@+id/screenshot_toalbum" android:paddingLeft="6dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="10dp" android:drawableLeft="@drawable/screenshot_actionbar_back_light" android:layout_alignParentLeft="true" android:layout_alignParentBottom="true"/>
            <Button android:textSize="12sp" android:textColor="@color/screenshot_lighttheme_text_color" android:id="@+id/screenshot_feedback" android:background="@drawable/screenshot_feedback_light" android:visibility="invisible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/screenshot_feedback_margin_right" android:layout_marginBottom="14dp" android:text="@string/screenshot_feedback_txt" android:layout_alignParentRight="true" android:layout_alignParentBottom="true"/>
        </RelativeLayout>
        <TextView android:textSize="15sp" android:textColor="@color/screenshot_lighttheme_text_color" android:gravity="center" android:id="@+id/txt_top_msg" android:background="@color/screenshot_top_msg_bg" android:padding="@dimen/screenshot_topmsg_padding" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content"/>
    </FrameLayout>
    <View android:id="@+id/top_msg_divider" android:background="@color/screenshot_part_divider_color" android:visibility="gone" android:layout_width="match_parent" android:layout_height="0.33dp" android:layout_below="@+id/top_titleormsg_layout"/>
    <View android:background="@color/screenshot_part_divider_color" android:layout_width="match_parent" android:layout_height="0.33dp" android:layout_above="@+id/button_container"/>
    <LinearLayout android:orientation="horizontal" android:id="@+id/button_container" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignParentBottom="true" android:layout_centerHorizontal="true">
        <Button android:layout_gravity="center" android:id="@+id/button_long_screenshot" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screenshot_long_screenshot" android:drawableTop="@drawable/action_button_longscreenshot_light" style="?android:attr/actionButtonStyle"/>
        <Button android:layout_gravity="center" android:id="@+id/button_send" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screenshot_send" android:drawableTop="0x1002001d" style="?android:attr/actionButtonStyle"/>
        <Button android:layout_gravity="center" android:id="@+id/button_edit" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screenshot_edit" android:drawableTop="0x10020009" style="?android:attr/actionButtonStyle"/>
        <Button android:layout_gravity="center" android:id="@+id/button_delete" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/screenshot_delete" android:drawableTop="0x10020005" style="?android:attr/actionButtonStyle"/>
        <View android:layout_width="0dp" android:layout_height="@dimen/screenshot_display_button_height"/>
        <Button android:textColor="@color/screenshot_lighttheme_text_color" android:layout_gravity="center" android:id="@+id/button_stop_long_screenshot" android:background="@drawable/screenshot_btn_bg" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
    </LinearLayout>
</RelativeLayout>
