<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:androidprv="http://schemas.android.com/apk/prv/res/android" xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:systemui="http://schemas.android.com/apk/res/com.android.systemui" xmlns:aapt="http://schemas.android.com/aapt" android:scrollbars="none" android:layout_width="match_parent" android:layout_height="match_parent" android:fillViewport="true">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
        <ListView android:scrollbarAlwaysDrawVerticalTrack="true" android:id="@android:id/list" android:visibility="gone" android:clipToPadding="false" android:layout_width="match_parent" android:layout_height="wrap_content" android:drawSelectorOnTop="false" android:cacheColorHint="@android:color/transparent"/>
        <ImageView android:layout_gravity="center_horizontal" android:background="@drawable/miui_add_face_recoginition_suggestion" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="65dp"/>
        <com.android.keyguard.JustifyTextView android:textSize="14sp" android:textColor="@color/face_unlock_suggestion_first_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="48dp" android:text="@string/face_data_suggesstion_first" android:lineSpacingExtra="1.3dp" android:layout_marginStart="26.7dp" android:layout_marginEnd="26.7dp"/>
        <com.android.keyguard.JustifyTextView android:textSize="14sp" android:textColor="@color/keyguard_charging_info_bg_color" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.7dp" android:text="@string/face_data_suggesstion_second" android:lineSpacingExtra="1.3dp" android:layout_marginStart="26.7dp" android:layout_marginEnd="26.7dp"/>
        <LinearLayout android:gravity="bottom|center_vertical|center_horizontal|center" android:layout_width="match_parent" android:layout_height="0dp" android:layout_marginBottom="18.3dp" android:layout_weight="1" android:layout_marginStart="26.7dp" android:layout_marginEnd="26.7dp">
            <Button android:id="@+id/miui_face_recoginition_suggestion_next" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/face_data_siggesstion_next"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
